# NYX

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  plan.md  tsconfig.api.json
.stellar-artifacts/: asset_registry.wasm  audit_disclosure_registry.wasm  batch_netting_verifier.wasm  cctp_ingress_adapter.wasm  collateral_policy.wasm  collateral_sufficiency_verifier.wasm  compliance_control.wasm  corporate_actions_engine.wasm  encumbrance_registry.wasm  entitlement_claim_verifier.wasm  legal_state_registry.wasm  mock_proof_verifier.wasm  order_commit_pool.wasm  participant_registry.wasm  private_match_verifier.wasm  proof_gateway.wasm  settlement_netting_engine.wasm  unencumbered_lot_verifier.wasm
circuits/: README.md  batch_netting.circom  collateral_sufficiency.circom  entitlement_claim.circom  private_match.circom  unencumbered_lot.circom
contracts/asset-registry/: Cargo.toml
contracts/asset-registry/src/: lib.rs
contracts/audit-disclosure-registry/: Cargo.toml
contracts/audit-disclosure-registry/src/: lib.rs
contracts/batch-netting-verifier/: Cargo.toml
contracts/batch-netting-verifier/src/: lib.rs  test.rs
contracts/cctp-ingress-adapter/: Cargo.toml
contracts/cctp-ingress-adapter/src/: lib.rs
contracts/cctp-ingress-adapter/test_snapshots/tests/: normalizes_amounts_exactly.1.json  records_cctp_receipt_from_message.1.json  rejects_duplicate_nonce.1.json  rejects_duplicate_session.1.json  rejects_invalid_hook_version.1.json  rejects_unregistered_wallet.1.json  rejects_unsupported_asset.1.json  rejects_wrong_destination_domain.1.json
contracts/collateral-policy/: Cargo.toml
contracts/collateral-policy/src/: lib.rs
contracts/collateral-sufficiency-verifier/: Cargo.toml
contracts/collateral-sufficiency-verifier/src/: lib.rs  (+1 more)
contracts/compliance-control/: Cargo.toml
contracts/compliance-control/src/: lib.rs
contracts/compliance-control/test_snapshots/tests/: records_pause_freeze_and_operator_action.1.json
contracts/corporate-actions-engine/: Cargo.toml
contracts/corporate-actions-engine/src/: lib.rs  tests.rs
contracts/corporate-actions-engine/test_snapshots/tests/: marks_claim_paid_with_real_transfer.1.json  operator_can_close_event.1.json  registers_event_and_records_real_claim.1.json  rejects_claim_before_window.1.json  rejects_reused_claim_nullifier.1.json
contracts/encumbrance-registry/: Cargo.toml
contracts/encumbrance-registry/src/: lib.rs
contracts/encumbrance-registry/test_snapshots/tests/: records_attestation_and_lock.1.json  rejects_invalid_attestor_signature.1.json  rejects_reused_lot_nullifier.1.json  releases_lot_and_marks_released.1.json  sweeps_expired_lot.1.json
contracts/entitlement-claim-verifier/: Cargo.toml
contracts/entitlement-claim-verifier/src/: lib.rs  test.rs
contracts/legal-state-registry/: Cargo.toml
contracts/mock-proof-verifier/: Cargo.toml
contracts/order-commit-pool/: Cargo.toml
contracts/participant-registry/: Cargo.toml
contracts/private-match-verifier/: Cargo.toml
contracts/proof-gateway/: Cargo.toml
contracts/proof-gateway/src/: lib.rs
contracts/proof-gateway/test_snapshots/tests/: records_proof_receipt.1.json  records_unencumbered_lot_receipt_with_real_bn254_proof.1.json  rejects_expired_proof.1.json  rejects_invalid_proof.1.json  rejects_participant_mismatch.1.json  rejects_policy_version_mismatch.1.json  rejects_reused_nonce.1.json  rejects_unsupported_verifier.1.json  revokes_receipt_without_erasing_history.1.json
contracts/settlement-netting-engine/: Cargo.toml
contracts/settlement-netting-engine/src/: lib.rs  tests.rs
contracts/settlement-netting-engine/test_snapshots/tests/: rejects_duplicate_execution_ids.1.json  rejects_duplicate_trade_nullifier_arguments.1.json  settles_batch_with_real_asset_transfers.1.json  settles_batch_with_real_asset_transfers_in_two_steps.1.json  settles_execution_dvp_with_real_asset_transfers.1.json  settles_real_batch_netting_proof.1.json
contracts/unencumbered-lot-verifier/: Cargo.toml
crates/zkdtcc-types/: Cargo.toml
deployments/: testnet-phase0-demo0628b.json  testnet-protocol-demo0628b.json
deployments/reports/: phase0-onchain-checks-demo0628b-2026-06-28t21-06-24-902z.json  phase4-protocol-deploy-demo0628b-2026-06-28t23-09-17-613z.json  phase4-protocol-deploy-demo0628b-2026-06-29t10-09-50-517z.json  phase4-protocol-deploy-demo0628b-2026-06-29t15-23-14-624z.json  step10-onchain-demo0628b-2026-06-29t23-53-29-252z.json  step10-onchain-demo0628b-2026-06-30t00-22-07-247z.json  step11-onchain-demo0628b-2026-06-29t23-31-01-281z.json  step12-onchain-demo0628b-2026-06-29t23-41-25-926z.json  step7-onchain-demo0628b-2026-06-29t16-48-42-914z.json  step8-onchain-demo0628b-2026-06-29t22-59-52-008z.json  step9-onchain-demo0628b-2026-06-29t23-10-06-876z.json  step9-onchain-demo0628b-2026-06-30t00-31-35-805z.json
docs/: compliance-hardening-mvp.md  frontend-demo-spec.md  frontend-screen-content-spec.md  onchain-test-matrix.md
scripts/: batch-netting-input-lib.mjs  batch-netting-phase5-lib.mjs  bootstrap-phase0-testnet.mjs  collateral-sufficiency-input-lib.mjs  collateral-sufficiency-phase2-lib.mjs  deploy-protocol-testnet.mjs  entitlement-claim-input-lib.mjs  entitlement-claim-phase6-lib.mjs  generate-batch-netting-input.mjs  generate-batch-netting-proof.mjs  generate-collateral-sufficiency-proof.mjs  generate-entitlement-claim-input.mjs  generate-entitlement-claim-proof.mjs  generate-private-match-input.mjs  generate-private-match-proof.mjs  generate-unencumbered-input.mjs  generate-unencumbered-proof.mjs  private-match-input-lib.mjs  private-match-phase4-lib.mjs  run-batch-netting-phase5-flow.mjs  run-entitlement-claim-phase6-flow.mjs  run-phase0-onchain-checks.mjs  run-private-match-phase4-flow.mjs  run-steps5-12-testnet.mjs  run-unencumbered-phase3-flow.mjs  test-batch-netting-phase5.mjs  test-collateral-sufficiency-phase2.mjs  test-entitlement-claim-phase6.mjs  test-private-match-phase4.mjs  test-unencumbered-phase3.mjs  unencumbered-input-lib.mjs  unencumbered-phase3-lib.mjs
src/api/: app.ts  server.ts  types.ts
(+41 files in other folders)
