[workspace]
members = [
    "contracts/asset-registry",
    "contracts/batch-netting-verifier",
    "contracts/corporate-actions-engine",
    "contracts/collateral-policy",
    "contracts/cctp-ingress-adapter",
    "contracts/encumbrance-registry",
    "contracts/entitlement-claim-verifier",
    "contracts/participant-registry",
    "contracts/order-commit-pool",
    "contracts/private-match-verifier",
    "contracts/proof-gateway",
    "contracts/settlement-netting-engine",
    "contracts/unencumbered-lot-verifier",
    "contracts/legal-state-registry",
    "crates/zkdtcc-types",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
soroban-sdk = "25.3.1"
zkdtcc-types = { path = "crates/zkdtcc-types" }
asset-registry = { path = "contracts/asset-registry" }
participant-registry = { path = "contracts/participant-registry" }
collateral-policy = { path = "contracts/collateral-policy" }
proof-gateway = { path = "contracts/proof-gateway" }
unencumbered-lot-verifier = { path = "contracts/unencumbered-lot-verifier" }
order-commit-pool = { path = "contracts/order-commit-pool" }
private-match-verifier = { path = "contracts/private-match-verifier" }
batch-netting-verifier = { path = "contracts/batch-netting-verifier" }
settlement-netting-engine = { path = "contracts/settlement-netting-engine" }
entitlement-claim-verifier = { path = "contracts/entitlement-claim-verifier" }
corporate-actions-engine = { path = "contracts/corporate-actions-engine" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.test]
opt-level = 0
debug = true
