[package]
name = "corporate-actions-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
zkdtcc-types = { workspace = true }
participant-registry = { workspace = true }
proof-gateway = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
serde_json = "1.0"
asset-registry = { workspace = true }
collateral-policy = { workspace = true }
entitlement-claim-verifier = { workspace = true }
